--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- <html lang="en" data-bs-theme="dark / light"> -->
 
 <head>
     <meta charset="UTF-8">
@@ -41,7 +42,7 @@
 <body>
     <h1>BUILDER</h1>
 
-    <div id="create_campaign_name" class="container">
+    <div id="create_campaign_name" class="container border border-secondary rounded-2">
         <div class="row">
             <div class="col-auto">
                 <h3>캠페인명 생성하기 <span class="example_text">| 예: 00.브랜드-AA</span></h3>
@@ -110,7 +111,7 @@
         </div>
     </div>
 
-    <div id="create_ad_group_name" class="container">
+    <div id="create_ad_group_name" class="container border border-secondary rounded-2">
         <div class="row">
             <div class="col-auto">
                 <h3>광고그룹명 생성하기 <span class="example_text">| 예: 00.AA-자사몰_일반-BR-A-M-NSPW</span></h3>
@@ -139,16 +140,16 @@
             </div>
             <div class="row g-3 align-items-center">
                 <div class="col-auto">
-                    <label for="ad_group_name_code">캠페인 코드 추출: 캠페인명에 생성된 결과를 붙여넣으세요.</label>
+                    <label for="ad_group_name_code">캠페인 코드 자동 추출</label>
                 </div>
                 <div class="col-auto">
                     <input type="text" id="ad_group_name_code" class="form-control form-control-sm"
-                        aria-describedby="adGroupnNameCodeHelpInline" placeholder="예: 00.브랜드-AA">
+                        aria-describedby="adGroupnNameCodeHelpInline" placeholder="예: 00.브랜드-AA" disabled readonly>
                 </div>
                 <!-- 비활성화하고 캠페인명 결과값을 자동으로 입력하는 것으로 수정 필요 -->
                 <div class="col-auto">
                     <span id="adGroupnNameCodeHelpInline" class="form-text">
-                        캠페인 생성하기에서 추출된 결과를 입력하세요.
+                        캠페인명이 자동으로 입력됩니다.
                     </span>
                 </div>
             </div>
@@ -264,6 +265,73 @@
             </div>
         </div>
 
+        <div class="container text-center">
+            <div class="row">
+                <!-- 1. 네이버 브랜드 검색 선택시 2. 디바이스 PC 선택 시 활성화 -->
+                <div id="ad_group_name_pc" class="col-auto d-none">
+                    <div class="row g-2 align-items-center">
+                        <div class="col-auto">
+                            <label for="ad_group_name_pc_placement">PC 네이버 브랜드 검색 클릭위치</label>
+                        </div>
+                        <div class="col-auto">
+                            <select id="ad_group_name_pc_placement" class="form-select form-select-sm"
+                                aria-label="ad group name pc placement">
+                                <option selected value="">-- 필수선택 --</option>
+                                <option value="homelink">홈 링크</option>
+                                <option value="brandnews">브랜드소식</option>
+                                <option value="main_image">메인 콘텐츠</option>
+                                <option value="main_text">텍스트 링크</option>
+                                <option value="sublink_1">서브링크1</option>
+                                <option value="sublink_2">서브링크2</option>
+                                <option value="sublink_3">서브링크3</option>
+                                <option value="sublink_4">서브링크4</option>
+                                <option value="thumbnail_1">썸네일1</option>
+                                <option value="thumbnail_2">썸네일2</option>
+                                <option value="thumbnail_3">썸네일3</option>
+                                <option value="dynamic_1">다이나믹 썸네일1</option>
+                                <option value="dynamic_2">다이나믹 썸네일2</option>
+                                <option value="dynamic_3">다이나믹 썸네일3</option>
+                                <option value="dynamic_4">다이나믹 썸네일4</option>
+                                <option value="dynamic_5">다이나믹 썸네일5</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 1. 네이버 브랜드 검색 선택시 2. 디바이스 모바일 선택 시 활성화 -->
+                <div id="ad_group_name_mo" class="col-auto d-none">
+                    <div class="row g-2 align-items-center">
+                        <div class="col-auto">
+                            <label for="ad_group_name_mo_placement">모바일 네이버 브랜드 검색 클릭위치</label>
+                        </div>
+                        <div class="col-auto">
+                            <select id="ad_group_name_mo_placement" class="form-select form-select-sm"
+                                aria-label="ad group name mo placement">
+                                <option selected value="">-- 필수선택 --</option>
+                                <option value="homelink">홈 링크</option>
+                                <option value="brandnews">브랜드소식</option>
+                                <option value="main_image">메인 콘텐츠</option>
+                                <option value="main_text">텍스트 링크</option>
+                                <option value="thumbnail_1">썸네일1</option>
+                                <option value="thumbnail_2">썸네일2</option>
+                                <option value="thumbnail_3">썸네일3</option>
+                                <option value="btn_1">버튼1</option>
+                                <option value="btn_2">버튼2</option>
+                                <option value="btn_3">버튼3</option>
+                                <option value="btn_4">버튼4</option>
+                                <option value="tab1_th1">다이나믹 썸네일 탭1-썸네일1</option>
+                                <option value="tab1_th2">다이나믹 썸네일 탭1-썸네일2</option>
+                                <option value="tab1_th3">다이나믹 썸네일 탭1-썸네일3</option>
+                                <option value="tab2_th1">다이나믹 썸네일 탭2-썸네일1</option>
+                                <option value="tab2_th2">다이나믹 썸네일 탭2-썸네일2</option>
+                                <option value="tab2_th3">다이나믹 썸네일 탭2-썸네일3</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row align-items-center">
             <div class="col-auto">
                 <h3>광고그룹명 결과:</h3>
@@ -274,7 +342,7 @@
         </div>
     </div>
 
-    <div id="create_ad_name" class="container">
+    <div id="create_ad_name" class="container border border-secondary rounded-2">
         <div class="row">
             <div class="col-auto">
                 <h3>광고/에셋명 생성하기 <span class="example_text">| 예: 자려한_코성형-A-00-Y-I-250529</span></h3>
@@ -652,7 +720,7 @@
             NSBR: {
                 utm_source: "naver",
                 utm_medium: "cpc",
-                utm_content: "{query}-클릭위치(enum)",
+                // utm_content: "{query}-클릭위치(enum)",
                 utm_term: "{keyword}",
                 utm_id: "{ad}"
             },
@@ -680,7 +748,7 @@
             GGPX: {
                 utm_source: "google",
                 utm_medium: "cpc",
-                utm_id: "에셋그룹ID - 수동입력"
+                utm_id: "에셋그룹ID-수동입력"
             },
             MTAR: {
                 utm_source: "{{site_source_name}}}",
@@ -744,6 +812,12 @@
 
             const output = `${campaignNameNumber}.${campaignNameTitle}-${campaignNameCode}`;
             document.getElementById("campaign_name_result").textContent = output;
+
+            // <pre>에 출력
+            document.getElementById("campaign_name_result").textContent = output;
+
+            // input에도 자동 입력
+            document.getElementById("ad_group_name_code").value = output;
         }
 
         function adGroupOutput() {
@@ -760,6 +834,33 @@
             const output = `${adGroupNameNumber}.${adGroupNameCodeResult}-${adGroupNameTitle}-${adGroupNameType}-${adGroupNameTime}-${adGroupNameDevice}-${adGroupNamePlatform}`;
             document.getElementById("ad_group_name_result").textContent = output;
         }
+
+        const platformSelect = document.getElementById("ad_group_name_platform");
+        const deviceSelect = document.getElementById('ad_group_name_device');
+
+        const adGroupNamePc = document.getElementById("ad_group_name_pc");
+        const adGroupNameMo = document.getElementById("ad_group_name_mo");
+
+        function naverBrandSearchSelected() {
+            const selectedPlatform = platformSelect.value;
+            const selectedDevice = deviceSelect.value;
+
+            adGroupNamePc.classList.add('d-none');
+            adGroupNameMo.classList.add('d-none');
+            adGroupNamePc.classList.remove('d-block');
+            adGroupNameMo.classList.remove('d-block');
+
+            if (selectedDevice === 'P' && selectedPlatform === 'NSBR') {
+                adGroupNamePc.classList.remove('d-none');
+                adGroupNamePc.classList.add('d-block');
+            } else if (selectedDevice === 'M' && selectedPlatform === 'NSBR') {
+                adGroupNameMo.classList.remove('d-none');
+                adGroupNameMo.classList.add('d-block');
+            }
+        }
+
+        platformSelect.addEventListener('change', naverBrandSearchSelected);
+        deviceSelect.addEventListener('change', naverBrandSearchSelected);
 
         document.getElementById("ad_name_date").addEventListener("change", function () {
             const date = new Date(this.value);
@@ -788,6 +889,7 @@
 
         function createUtmUrl() {
             const select = document.getElementById("ad_group_name_platform").value;
+            console.log(select)
             const resultBox = document.getElementById("utm_url_result");
             const adGroupName = document.getElementById("ad_group_name_result").textContent.trim();
             const adName = document.getElementById("ad_name_result").textContent.trim();
@@ -824,7 +926,18 @@
                 if (utm.hasOwnProperty('utm_content')) {
                     utm_content = utm.utm_content;
                 } else {
-                    utm_content = adName;
+                    // 네이버 브랜드 검색의 경우 클릭위치 utm_content에 {query}와 함께 삽입
+                    if (select === "NSBR") {
+                        if (deviceSelect.value === "P") {
+                            const pcContentName = document.getElementById("ad_group_name_pc_placement").value
+                            utm_content = `{query}-${pcContentName}`;
+                        } else if (deviceSelect.value === "M") {
+                            const moContentName = document.getElementById("ad_group_name_mo_placement").value
+                            utm_content = `{query}-${moContentName}`;
+                        }
+                    } else {
+                        utm_content = adName;
+                    }
                 }
                 if (
                     utm_content !== undefined &&
@@ -849,7 +962,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
