--- a/index.html
+++ b/index.html
@@ -60,28 +60,31 @@
                     <label for="campaign_name_number" class="col-form-label">순번</label>
                 </div>
                 <div class="col-auto">
-                    <input type="text" id="campaign_name_number" class="form-control form-control-sm"
-                        aria-describedby="campaignNameNumberHelpInline" placeholder="00">
+                    <input type="text" id="campaign_name_number" class="form-control form-control-sm" placeholder="00">
                 </div>
                 <div class="col-auto">
-                    <span id="campaignNameNumberHelpInline" class="form-text">
-                        2자리 숫자로 첫 시작은 00입니다.
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="2자리 숫자로 입력해야 하며 첫 시작은 00입니다.">
+                        입력가이드
+                    </button>
                 </div>
             </div>
 
             <div class="row g-3 align-items-center">
                 <div class="col-auto">
-                    <label for="campaign_name_title" class="col-form-label">도메인</label>
+                    <label for="campaign_name_title" class="col-form-label">캠페인명</label>
                 </div>
                 <div class="col-auto">
                     <input type="text" id="campaign_name_title" class="form-control form-control-sm"
-                        aria-describedby="campaignNameTitleHelpInline" placeholder="{아이템}_{아이템}_...">
+                        placeholder="{아이템}_{아이템}_...">
                 </div>
                 <div class="col-auto">
-                    <span id="campaignNameTitleHelpInline" class="form-text">
-                        캠페인 주제에 해당하는 내용을 설정하고 띄어쓰기가 필요할 경우 언더바 "_" 로 설정해야 합니다. (띄어쓰기 금지)
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="캠페인 주제에 해당하는 내용을 설정하고 띄어쓰기가 필요할 경우 언더바 _ 로 설정해야 합니다. (띄어쓰기 금지)">입력가이드</button>
                 </div>
             </div>
 
@@ -91,12 +94,13 @@
                 </div>
                 <div class="col-auto">
                     <input type="text" id="campaign_name_code" class="form-control form-control-sm"
-                        aria-describedby="campaignNameCodeHelpInline" placeholder="AA~AZ, A0~A9, BA~BZ, ...">
+                        placeholder="AA~AZ, A0~A9, BA~BZ, ...">
                 </div>
                 <div class="col-auto">
-                    <span id="campaignNameCodeHelpInline" class="form-text">
-                        고유한 코드값이 설정되어야 하며 A-Z까지 두자리로 설정해야 합니다. 수량이 많은 경우 Z다음에 0-9까지 사용 가능합니다.
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="고유한 코드값이 설정되어야 하며 A-Z까지 두자리로 설정해야 합니다. 수량이 많은 경우 Z다음에 0-9까지 사용 가능합니다.">입력가이드</button>
                 </div>
             </div>
         </div>
@@ -129,13 +133,13 @@
                     <label for="ad_group_name_number" class="col-form-label">순번</label>
                 </div>
                 <div class="col-auto">
-                    <input type="text" id="ad_group_name_number" class="form-control form-control-sm"
-                        aria-describedby="adGroupnNameNumberHelpInline" placeholder="00">
+                    <input type="text" id="ad_group_name_number" class="form-control form-control-sm" placeholder="00">
                 </div>
                 <div class="col-auto">
-                    <span id="adGroupnNameNumberHelpInline" class="form-text">
-                        2자리 숫자로 첫 시작은 00입니다.
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="2자리 숫자로 입력해야 하며 첫 시작은 00입니다.">입력가이드</button>
                 </div>
             </div>
             <div class="row g-3 align-items-center">
@@ -144,27 +148,29 @@
                 </div>
                 <div class="col-auto">
                     <input type="text" id="ad_group_name_code" class="form-control form-control-sm"
-                        aria-describedby="adGroupnNameCodeHelpInline" placeholder="예: 00.브랜드-AA" disabled readonly>
+                        placeholder="예: 00.브랜드-AA" disabled readonly>
                 </div>
                 <!-- 비활성화하고 캠페인명 결과값을 자동으로 입력하는 것으로 수정 필요 -->
                 <div class="col-auto">
-                    <span id="adGroupnNameCodeHelpInline" class="form-text">
-                        캠페인명이 자동으로 입력됩니다.
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="위에서 생성된 캠페인명이 자동으로 입력됩니다.">입력가이드</button>
                 </div>
             </div>
             <div class="row g-3 align-items-center">
                 <div class="col-auto">
-                    <label for="ad_group_name_title">서브도메인</label>
+                    <label for="ad_group_name_title">광고그룹명</label>
                 </div>
                 <div class="col-auto">
                     <input type="text" id="ad_group_name_title" class="form-control form-control-sm"
-                        aria-describedby="adGroupnNameTitleHelpInline" placeholder="{아이템}_{아이템}_...">
+                        placeholder="{아이템}_{아이템}_...">
                 </div>
                 <div class="col-auto">
-                    <span id="adGroupnNameTitleHelpInline" class="form-text">
-                        소재와 관련된 내용을 설정하고 띄어쓰기가 필요할 경우 언더바 "_" 로 설정해야 합니다. (띄어쓰기 금지)
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="광고그룹과 관련된 내용을 설정하고 띄어쓰기가 필요할 경우 언더바 _ 로 설정해야 합니다. (띄어쓰기 금지)">입력가이드</button>
                 </div>
             </div>
         </div>
@@ -357,16 +363,17 @@
         <div class="container text-left">
             <div class="row g-3 align-items-center">
                 <div class="col-auto">
-                    <label for="ad_name_title" class="col-form-label">서브도메인</label>
+                    <label for="ad_name_title" class="col-form-label">소재명</label>
                 </div>
                 <div class="col-auto">
                     <input type="text" id="ad_name_title" class="form-control form-control-sm"
-                        aria-describedby="adNameTitleHelpInline" placeholder="{주제1}_{주제1.1}_{주제1.1.1}">
+                        placeholder="{주제1}_{주제1.1}_{주제1.1.1}">
                 </div>
                 <div class="col-auto">
-                    <span id="adNameTitleHelpInline" class="form-text">
-                        소재와 관련된 내용을 설정하고 띄어쓰기가 필요할 경우 언더바 "_" 로 설정해야 합니다. (띄어쓰기 금지)
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="소재와 관련된 내용을 설정하고 띄어쓰기가 필요할 경우 언더바 _ 로 설정해야 합니다. (띄어쓰기 금지)">입력가이드</button>
                 </div>
             </div>
             <div class="row g-3 align-items-center">
@@ -374,13 +381,13 @@
                     <label for="ad_name_ab_test" class="col-form-label">A/B테스트</label>
                 </div>
                 <div class="col-auto">
-                    <input type="text" id="ad_name_ab_test" class="form-control form-control-sm"
-                        aria-describedby="adNameAbTestHelpInline" placeholder="A or B">
+                    <input type="text" id="ad_name_ab_test" class="form-control form-control-sm" placeholder="A or B">
                 </div>
                 <div class="col-auto">
-                    <span id="adNameAbTestHelpInline" class="form-text">
-                        A/B 테스트 진행 시 대문자로 기입 (미진행 시 기본값 A)
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="A/B 테스트 진행 시 대문자로 기입해야 합니다. (미진행 시 기본값 A)">입력가이드</button>
                 </div>
             </div>
             <div class="row g-3 align-items-center">
@@ -388,13 +395,13 @@
                     <label for="ad_name_version" class="col-form-label">버전</label>
                 </div>
                 <div class="col-auto">
-                    <input type="text" id="ad_name_version" class="form-control form-control-sm"
-                        aria-describedby="adNameVersionHelpInline" placeholder="00">
+                    <input type="text" id="ad_name_version" class="form-control form-control-sm" placeholder="00">
                 </div>
                 <div class="col-auto">
-                    <span id="adNameVersionHelpInline" class="form-text">
-                        2자리 숫자로 첫 시작은 00입니다.
-                    </span>
+                    <button type="button" class="btn btn-sm btn-danger"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                        data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-content="2자리 숫자로 입력해야 하며 첫 시작은 00입니다.">입력가이드</button>
                 </div>
             </div>
         </div>
@@ -962,6 +969,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+    <script>
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+        const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+    </script>
 </body>
 
 </html>
