--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="row g-3 align-items-center">
                 <div class="col-auto">
-                    <label for="ad_group_name_code">캠페인 코드 자동 추출</label>
+                    <label for="ad_group_name_code" class="col-form-label">캠페인 코드 자동 추출</label>
                 </div>
                 <div class="col-auto">
                     <input type="text" id="ad_group_name_code" class="form-control form-control-sm"
@@ -160,7 +160,7 @@
             </div>
             <div class="row g-3 align-items-center">
                 <div class="col-auto">
-                    <label for="ad_group_name_title">광고그룹명</label>
+                    <label for="ad_group_name_title" class="col-form-label">광고그룹명</label>
                 </div>
                 <div class="col-auto">
                     <input type="text" id="ad_group_name_title" class="form-control form-control-sm"
