--- a/index.html
+++ b/index.html
@@ -111,15 +111,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="row align-items-center">
-            <div class="col-auto">
-                <h3>캠페인명 결과:</h3>
-            </div>
-            <div class="col-auto">
-                <pre id="campaign_name_result">(여기에 출력됩니다)</pre>
-            </div>
-        </div> -->
     </div>
 
     <div id="create_ad_group_name" class="container border border-secondary rounded-2">
@@ -346,15 +337,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="row align-items-center">
-            <div class="col-auto">
-                <h3>광고그룹명 결과:</h3>
-            </div>
-            <div class="col-auto">
-                <pre id="ad_group_name_result">(여기에 출력됩니다)</pre>
-            </div>
-        </div> -->
     </div>
 
     <div id="create_ad_name" class="container border border-secondary rounded-2">
@@ -467,15 +449,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="row align-items-center">
-            <div class="col-auto">
-                <h3>광고/에셋명 결과:</h3>
-            </div>
-            <div class="col-auto">
-                <pre id="ad_name_result">(여기에 출력됩니다)</pre>
-            </div>
-        </div> -->
     </div>
 
     <div id="create_utm_url">
@@ -490,7 +463,30 @@
                 <pre id="utm_url_result">(여기에 UTM URL이 생성됩니다)</pre>
             </div>
         </div>
+        <div>
+            <button type="button" onclick="addUtmToList()" class="btn btn-dark btn-sm"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                UTM 누적</button>
+            <span id="status_message" style="margin-left: 10px; color: green;"></span>
+            <button type="button" onclick="downloadUtmList()" class="btn btn-dark btn-sm"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                CSV 다운로드</button>
+        </div>
+    </div>
 
+    <div>
+        <!-- <ul id="utm_list_display" style="margin-top: 20px; padding-left: 20px; list-style-type: disc;"></ul> -->
+        <table border="1" class="table_box table table-hover caption-top">
+            <caption>UTM 누적 추가 <span style="color:red;">🚨새로고침하면 입력한 누적 내용들이 사라지니 주의하세요!</span></caption>
+            <thead class="table-dark">
+                <tr>
+                    <th>누적 추가 현황 </th>
+                </tr>
+            </thead>
+            <tbody id="utm_list_display">
+                <!-- <tr id="utm_list_display"></tr> -->
+            </tbody>
+        </table>
     </div>
 
     <hr>
@@ -907,6 +903,9 @@
         }
 
         function createUtmUrl() {
+
+            document.getElementById("status_message").textContent = "";
+
             const select = document.getElementById("ad_group_name_platform").value;
             console.log(select)
             const resultBox = document.getElementById("utm_url_result");
@@ -976,6 +975,54 @@
             } else {
                 resultBox.textContent = "유효한 매체 유형이 아닙니다.";
             }
+        }
+
+        const utmList = [];
+
+        function addUtmToList() {
+            const utmText = document.getElementById("utm_url_result").textContent.trim();
+            const statusMessage = document.getElementById("status_message");
+            const listDisplay = document.getElementById("utm_list_display");
+
+            if (!utmText || utmText === "(여기에 UTM URL이 생성됩니다)") {
+                statusMessage.textContent = "⛔ 생성된 UTM URL이 없습니다!";
+                statusMessage.style.color = "red";
+                return;
+            }
+
+            // 1. 배열에 추가
+            utmList.push(utmText);
+
+            // 2. 화면에 리스트로 추가
+            const tr = document.createElement("tr");
+            const td = document.createElement("td");
+            td.textContent = utmText;
+            listDisplay.appendChild(tr);
+            listDisplay.appendChild(td);
+
+            // 3. 메시지 표시
+            statusMessage.textContent = "추가됨";
+            statusMessage.style.color = "green";
+        }
+
+        function downloadUtmList() {
+            if (utmList.length === 0) {
+                alert("저장할 UTM이 없습니다!");
+                return;
+            }
+
+            let csvContent = "data:text/csv;charset=utf-8,UTM URL\n";
+            utmList.forEach(url => {
+                csvContent += url + "\n";
+            });
+
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "utm_urls.csv");
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
