--- a/index.html
+++ b/index.html
@@ -1011,15 +1011,16 @@
                 return;
             }
 
-            let csvContent = "data:text/csv;charset=utf-8,UTM URL\n";
+            let csvContent = '\uFEFF' + "UTM URL\n";
             utmList.forEach(url => {
                 csvContent += url + "\n";
             });
 
-            const encodedUri = encodeURI(csvContent);
+            const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
             const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "utm_urls.csv");
+            link.href = URL.createObjectURL(blob);
+            link.download = "utm_urls.csv";
+
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
