--- a/index.html
+++ b/index.html
@@ -766,42 +766,42 @@
                 utm_id: "에셋그룹ID-수동입력"
             },
             MTAR: {
-                utm_source: "{{site_source_name}}}",
+                utm_source: "{{site_source_name}}",
                 utm_medium: "paid_social",
                 utm_campaign: "{{adset.name}}",
                 utm_content: "{{ad.name}}-{{placement}}",
                 utm_id: "{{ad.id}}"
             },
             MTTR: {
-                utm_source: "{{site_source_name}}}",
+                utm_source: "{{site_source_name}}",
                 utm_medium: "paid_social",
                 utm_campaign: "{{adset.name}}",
                 utm_content: "{{ad.name}}-{{placement}}",
                 utm_id: "{{ad.id}}"
             },
             MTEG: {
-                utm_source: "{{site_source_name}}}",
+                utm_source: "{{site_source_name}}",
                 utm_medium: "paid_social",
                 utm_campaign: "{{adset.name}}",
                 utm_content: "{{ad.name}}-{{placement}}",
                 utm_id: "{{ad.id}}"
             },
             MTLD: {
-                utm_source: "{{site_source_name}}}",
+                utm_source: "{{site_source_name}}",
                 utm_medium: "paid_social",
                 utm_campaign: "{{adset.name}}",
                 utm_content: "{{ad.name}}-{{placement}}",
                 utm_id: "{{ad.id}}"
             },
             MTAP: {
-                utm_source: "{{site_source_name}}}",
+                utm_source: "{{site_source_name}}",
                 utm_medium: "paid_social",
                 utm_campaign: "{{adset.name}}",
                 utm_content: "{{ad.name}}-{{placement}}",
                 utm_id: "{{ad.id}}"
             },
             MTSL: {
-                utm_source: "{{site_source_name}}}",
+                utm_source: "{{site_source_name}}",
                 utm_medium: "paid_social",
                 utm_campaign: "{{adset.name}}",
                 utm_content: "{{ad.name}}-{{placement}}",
