광고 소재/에셋명에 AB TEST 항목 추가

--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
             const adNameType = document.getElementById("ad_name_type").value;
             const adNameDateResult = document.getElementById("ad_name_date_result").textContent;
 
-            const output = `${adNameTitle}-${adNameVersion}-${adNameDeliberate}-${adNameType}-${adNameDateResult}`;
+            const output = `${adNameTitle}-${adNameAbTest}-${adNameVersion}-${adNameDeliberate}-${adNameType}-${adNameDateResult}`;
             document.getElementById("ad_name_result").textContent = output;
         }
 
